<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView39"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/vartotojas_palik_s_atsiliepim" />

    <TextView
        android:id="@+id/textView40"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vardas"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/textVard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="7dp"
        android:layout_marginTop="8dp"
        android:text="Petras"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView42"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/elektroninis_pa_tas" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:text="Petras@Petras.com"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/textView44"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vertinimas"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        />

    <RatingBar
        android:id="@+id/ratingVart"
        android:isIndicator="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atsiliepimas"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textAtsiliep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/n_ra"
        android:text="BLABLABLA"
        android:textAlignment="center"
        android:layout_marginTop="8dp"/>

</LinearLayout>