<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.potato.privatisistema.SkelbimuPaieska">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Spinner
        android:id="@+id/spinnerTipas"
        android:layout_width="357dp"
        android:layout_height="22dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patTip"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerTipas"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saviv"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipas"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/stringSavivald"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/stringSavivald"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/savivaldHint"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stringGyven"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyven"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/stringGyven"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipas"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/stringGyven"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/gyvenHint"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mikRaj"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/stringSavivald"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/stringMikRaj"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/stringMikRaj"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/mikroRajHint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stringGatve"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gatve"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/stringGyven"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/stringGatve"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/stringGatve"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/gatveHint"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plot"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/stringMikRaj"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuo"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/intPlotasNuo"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iki"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/intPlotasIki"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/intPlotasNuo"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        android:layout_marginLeft="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/intPlotasIki"
        android:layout_marginRight="8dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/intPlotasIki"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kaina"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/intPlotasNuo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuo"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:layout_marginLeft="3dp"
        app:layout_constraintLeft_toLeftOf="@+id/intKainNuo"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iki"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/intKainIki"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/intKainNuo"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/intKainIki"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/intKainIki"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/insertHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/intKainNuo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent">
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/butIeskot"
        android:onClick="paieska"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:text="@string/iesk"
        app:layout_constraintTop_toBottomOf="@+id/insertHere"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
