<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.potato.privatisistema.ManoPaskyra">

    <EditText
        android:id="@+id/stringRegSlapyvardis"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/butSave" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/stringRegSlapyvardis"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/stringRegSlapyvardis" />

    <Button
        android:id="@+id/butGrafikas"
        android:onClick="tvarkytGrafika"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tvarkyti_grafik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/j_s_paskyra"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressRegistracija"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/stringRegVardas"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView60" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vardas"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/stringRegVardas"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/stringRegVardas" />

    <Button
        android:id="@+id/butSave"
        android:onClick="issaugoti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_saugoti_pakeitimus"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toTopOf="@+id/butKeistPass" />

    <Button
        android:id="@+id/butKeistPass"
        android:onClick="keistPass"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/keisti_slapta_od"
        app:layout_constraintBottom_toTopOf="@+id/butGrafikas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/stringNumeris"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono_numeris"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/stringNumeris"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/stringNumeris" />

</android.support.constraint.ConstraintLayout>
